...
                    .height(50.dp)
                    .background(Color.LightGray)
                    .padding(
                        horizontal = 8.dp,
                        vertical = 8.dp
                    )
                    .testTag("PokemonSearch"),
                textStyle = TextStyle(
                    color = Color.Black,
                    fontSize = 16.sp,
                    textAlign = TextAlign.Start,
                ),
                decorationBox = { innerTextField ->
...
            .clickable {
                val id = item.url.trimEnd('/').substringAfterLast('/').toInt()
                onPokemonSelect(id)
            }
            .fillMaxWidth()
            .padding(horizontal = 16.dp)
            .testTag("PokemonItem")
    ) {
        Text(
            modifier = Modifier
                .padding(top = 16.dp, bottom = 16.dp),
            text = index.toString() + ". " + item.name,
            style = MaterialTheme.typography.titleLarge
...
