...
            modifier = Modifier.size(200.dp),
        )

        Text(
            modifier = Modifier
                .padding(top = 16.dp, bottom = 16.dp)
                .testTag("PokemonDetailName"),
            text = item.name,
            style = MaterialTheme.typography.titleLarge,
            fontWeight = FontWeight.Bold
        )

        Text(
...
